# foundry-plugin

.claude-plugin/: marketplace.json  plugin.json
agents/: assayer.md  tracer.md
commands/: help.md  plan.md  resume.md  setup.md  start.md  status.md  stop.md
mcp-server/: pyproject.toml
mcp-server/src/foundry_mcp/: __init__.py  server.py
mcp-server/src/foundry_mcp/parsers/: critic.py  spec.py
mcp-server/src/foundry_mcp/schemas/: findings.py
mcp-server/src/foundry_mcp/tools/: citation.py  display.py  forge_spec.py  foundry.py  foundry_orchestrator.py  foundry_state.py  output.py  validation.py
scripts/: foundry.sh  setup-foundry.sh  setup-prereqs.sh
